test/cases/bad/bad034.lat
// Undeclared class

int main() {
    new X;
    return 0;
}